crates/test-generator/tests/snapshots/tsx/test_generated_return_statement.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
function test() { return value27; }

AST:
(program
  (function_declaration
    name: (identifier "test")
    parameters: (formal_parameters)
    body: (statement_block
      (return_statement
        (identifier "value27")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:10 to 1:14 }, name: "test", definition_type: FunctionDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:26 to 1:33 }, name: "value27", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
