crates/test-generator/tests/snapshots/tsx/test_generated_sequence_expression.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
a3, b3

AST:
(program
  (expression_statement
    (sequence_expression
      (identifier "a3")
      (identifier "b3")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:1 to 1:3 }, name: "a3", kind: Identifier, context: None },
        Usage { position: { 1:5 to 1:7 }, name: "b3", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
