crates/test-generator/tests/snapshots/tsx/test_generated_statement.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const var1 = source;

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "var1")
      value: (identifier "source")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "var1",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 11,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "source",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 20,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
