crates/test-generator/tests/snapshots/tsx/test_generated_template_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value31: `hello ${string}` = 'hello world';

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value31")
      type: (type_annotation
        (template_literal_type
          (string_fragment)
          (template_type
            (predefined_type "string")
          )
        )
      )
      value: (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value31",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
