crates/test-generator/tests/snapshots/tsx/test_generated_ternary_expression.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
condition1 ? trueVal : falseVal

AST:
(program
  (expression_statement
    (ternary_expression
      condition: (identifier "condition1")
      consequence: (identifier "trueVal")
      alternative: (identifier "falseVal")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "condition1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 11,
            },
            context: None,
        },
        Usage {
            name: "trueVal",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 21,
            },
            context: None,
        },
        Usage {
            name: "falseVal",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 24,
                end_line: 1,
                end_column: 32,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
